--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "react sns back-end server",
   "main": "app.js",
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
-    "express-validator": "^2.18.0"
+    "express-validator": "^2.18.0",
+    "mysql": "^2.9.0"
   },
   "devDependencies": {},
   "scripts": {
