--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express-validator": "^2.18.0",
     "mysql": "^2.9.0",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.0.0"
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
