--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "mysql": "^2.9.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-google-oauth2": "^0.1.6",
+    "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.4",
+    "passport-twitter": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
