--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "express-validator": "^2.18.0",
+    "forever": "^0.15.1",
     "mysql": "^2.9.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
