--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "react sns back-end server",
   "main": "app.js",
   "dependencies": {
-    "async": "^1.5.0",
-    "body-parser": "^1.14.1",
+    "async": "^2.0.0-rc.3",
+    "body-parser": "^1.15.0",
     "cors": "^2.7.1",
-    "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "express-validator": "^2.18.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "express-validator": "^2.20.3",
     "forever": "^0.15.1",
-    "mysql": "^2.9.0",
+    "mysql": "^2.10.2",
+    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.0.0",
+    "passport-facebook": "^2.1.0",
     "passport-google-oauth2": "^0.1.6",
-    "passport-kakao": "0.0.2",
+    "passport-kakao": "0.0.3",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.4",
-    "passport-twitter": "^1.0.3"
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {},
   "scripts": {
